--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/swiper": "^5.4.3",
     "@web3-react/core": "^6.1.9",
+    "acorn-import-assertions": "^1.7.6",
     "big.js": "^6.1.1",
     "circular-dependency-plugin": "^5.2.2",
     "connected-react-router": "^6.9.1",
@@ -149,6 +150,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "swiper": "^7.0.6",
     "ts-standard": "^10.0.0"
   },
   "importSort": {
