--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@types/big.js": "^6.1.2",
     "@types/enzyme": "^3.10.8",
     "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.7.10",
     "@types/react": "^16.14.8",
     "@types/react-router-dom": "^5.1.7",
@@ -82,7 +83,6 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-styled-components": "^7.0.5",
-    "jest-transform-graphql": "^2.1.0",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "0.6.1",
     "jscpd": "^3.3.26",
@@ -150,7 +150,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
-    "swiper": "^7.0.6",
+    "swiper": "^7.0.0",
     "ts-standard": "^10.0.0"
   },
   "importSort": {
