--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/runtime-corejs3": "^7.14.7",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
     "@openzeppelin/hardhat-upgrades": "^1.8.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
