--- a/jest.config.json
+++ b/jest.config.json
@@ -43,7 +43,8 @@
     "^@util(.*)$": "<rootDir>/src/util$1",
     "^@pages(.*)$": "<rootDir>/src/pages$1",
     "^@state(.*)$": "<rootDir>/src/redux$1",
-    "^@i18n(.*)$": "<rootDir>/src/i18n$1"
+    "^@i18n(.*)$": "<rootDir>/src/i18n$1",
+    "\\.(scss|sass|css)$": "identity-obj-proxy"
   },
   "verbose": true,
   "resetMocks": true,
