--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "type": "module",
   "keywords": [],
   "main": "webpack.config.babel.js",
   "scripts": {
@@ -141,8 +140,10 @@
     "husky": "^6.0.0",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^27.0.6",
     "jest-styled-components": "^7.0.5",
+    "nanocolors": "^0.2.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.4",
@@ -158,7 +159,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
-    "swiper": "^7.0.0",
+    "swiper": "^6.8.4",
     "ts-standard": "^10.0.0"
   },
   "importSort": {
