--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "target": "es2017",
-    "module": "ES2020",
+    "module": "es2015",
     "lib": ["es6", "dom"],
     "sourceMap": true,
     "allowJs": true,
