--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,9 @@ services:
   eth-devnet:
     container_name: eth-devnet
     image: node:lts-alpine
-    command: sh -c "npx hardhat node"
+    command: sh -c "npx hardhat node --no-deploy"
     volumes:
+      - ./deployments:/hardhat/deployments
       - ./hardhat.config.js:/hardhat/hardhat.config.js
       - ./package.json:/hardhat/package.json
       - ./package-lock.json:/hardhat/package-lock.json
