--- a/package.json
+++ b/package.json
@@ -28,13 +28,18 @@
     "hook": "npm run lint:js:fix & npm run check:js & npm run test:ui & hh compile & npm run test"
   },
   "devDependencies": {
+    "@appliedblockchain/chainlink-plugins-api-consumer": "0.0.5",
+    "@appliedblockchain/chainlink-plugins-fund-link": "0.0.1",
+    "@appliedblockchain/chainlink-plugins-price-consumer": "0.0.4",
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "~7.12.1",
     "@babel/runtime-corejs3": "^7.14.7",
+    "@chainlink/contracts": "^0.2.2",
     "@chainlink/token": "^1.1.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.11",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.1.0",
@@ -55,7 +60,6 @@
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
-    "@chainlink/contracts": "^0.2.2",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
     "bs58": "^4.0.1",
@@ -73,11 +77,12 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.3.1",
+    "ethers": "^5.4.7",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "hardhat": "^2.4.3",
     "hardhat-abi-exporter": "^2.3.0",
     "hardhat-contract-sizer": "^2.0.3",
+    "hardhat-deploy": "^0.9.4",
     "hardhat-gas-reporter": "^1.0.4",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
@@ -110,6 +115,7 @@
     "typescript": "^4.3.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "url-loader": "^4.1.1",
+    "web3": "^1.6.0",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
@@ -139,6 +145,7 @@
     "connected-react-router": "^6.9.1",
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "husky": "^6.0.0",
     "i18next": "^20.3.5",
     "i18next-browser-languagedetector": "^6.1.2",
