--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "project": "tsconfig.json",
     "ignore": [
       "webpack.config.babel.js",
+      "hardhat.config.js",
       "package.json",
       ".gitignore",
       "/src/i18n",
