--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        network: [kovan]
+        network: [rinkeby]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
