--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "rootDir": "./",
     "typeRoots": ["./node_modules/@types", "./src/@types"],
     "paths": {
+      "crypto": [
+        "node_modules/crypto-js"
+      ],
       "@public/*": [
         "public/*"
       ],
@@ -49,6 +52,9 @@
       ],
       "@pages/*": [
         "src/pages/*"
+      ],
+      "@w3/*": [
+        "src/w3/*"
       ],
       "@i18n/*": [
         "src/i18n/*"
