--- a/package.json
+++ b/package.json
@@ -154,7 +154,6 @@
     "@usedapp/core": "^0.5.4",
     "acorn-import-assertions": "^1.7.6",
     "big.js": "^6.1.1",
-    "cid-tool": "^3.0.0",
     "circular-dependency-plugin": "^5.2.2",
     "connected-react-router": "^6.9.1",
     "crypto": "^1.0.1",
@@ -168,6 +167,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^27.0.6",
     "jest-styled-components": "^7.0.5",
+    "multiformats": "^9.4.10",
     "nanocolors": "^0.2.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
