--- a/jest.config.json
+++ b/jest.config.json
@@ -31,6 +31,7 @@
   ],
   "moduleNameMapper": {
     "^@src(.*)$": "<rootDir>/src$1",
+    "^@w3(.*)$": "<rootDir>/src/w3$1",
     "^@abi(.*)$": "<rootDir>/abi$1",
     "^@hooks(.*)$": "<rootDir>/src/hooks$1",
     "^@assets(.*)$": "<rootDir>/src/assets$1",
