--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,11 @@ services:
   eth-devnet:
     container_name: eth-devnet
     image: node:lts-alpine
-    command: sh -c "npx hardhat node"
+    command: sh -c "npx hardhat node --no-deploy"
     volumes:
+      - ./tasks:/hardhat/tasks
+      - ./deployments:/hardhat/deployments
       - ./hardhat.config.js:/hardhat/hardhat.config.js
-      - ./package.json:/hardhat/package.json
       - ./package-lock.json:/hardhat/package-lock.json
       - "./node_modules:/hardhat/node_modules:ro"
     working_dir: /hardhat
