--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "hardhat-deploy-ethers": "^0.3.0-beta.11",
     "husky": "^6.0.0",
@@ -186,7 +187,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "swiper": "^6.8.4",
-    "ts-standard": "^10.0.0"
+    "ts-standard": "^10.0.0",
+    "yup": "^0.32.11"
   },
   "importSort": {
     ".ts, .tsx": {
