--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install
-        run: npm ci
+        run: yarn install && npm ci
 
       - name: Check
         run: npm run check:js
