--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install yarn -g
       - name: Install
-        run: yarn install && npm ci
+        run: yarn install
       - name: Check
         run: npm run check:js
       - name: Build
