--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "~7.12.1",
     "@babel/runtime-corejs3": "^7.14.7",
+    "@chainlink/contracts": "^0.3.1",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.11",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -78,7 +79,7 @@
     "ethereum-waffle": "^3.3.0",
     "ethers": "^5.4.7",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
-    "hardhat": "^2.4.3",
+    "hardhat": "^2.8.3",
     "hardhat-abi-exporter": "^2.3.0",
     "hardhat-contract-sizer": "^2.0.3",
     "hardhat-deploy": "^0.9.4",
