--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@types/swiper": "^5.4.3",
     "@usedapp/core": "^0.5.4",
     "acorn-import-assertions": "^1.7.6",
+    "axios": "^0.25.0",
     "big.js": "^6.1.1",
     "circular-dependency-plugin": "^5.2.2",
     "connected-react-router": "^6.9.1",
