--- a/jest.config.json
+++ b/jest.config.json
@@ -47,7 +47,7 @@
     "^@state(.*)$": "<rootDir>/src/redux$1",
     "^@i18n(.*)$": "<rootDir>/src/i18n$1",
     "\\.(scss|sass|css)$": "identity-obj-proxy",
-    "\\.svg": "<rootDir>/.jest/svgrMock.js"
+    "\\.svg": "identity-obj-proxy"
   },
   "verbose": true,
   "resetMocks": true,
