--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "watch:ui": "webpack  --watch ",
     "build:ui": "cross-env NODE_ENV=production webpack",
     "start:ui": "cross-env WEBPACK_IS_DEV_SERVER=true NODE_ENV=development webpack serve --config webpack.config.babel.js",
-    "hook": "npm run lint:js:fix & npm run check:js & npm run test:ui & hh compile & npm run test"
+    "hook": "npm run lint:js:fix & npm run check:js & npm run test:ui & hh compile & npm run test",
+    "publish": "ipfs-deploy -C dist -d cloudflare -p pinata"
   },
   "devDependencies": {
     "@appliedblockchain/chainlink-plugins-api-consumer": "0.0.5",
@@ -87,6 +88,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^6.0.0",
     "import-sort-style-module-and-prefix": "^0.1.3",
+    "ipfs-deploy": "^11.1.0",
     "is-windows": "^1.0.2",
     "jest": "^27.0.5",
     "jest-circus": "26.6.0",
