--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@babel/register": "~7.12.1",
     "@babel/runtime-corejs3": "^7.14.7",
     "@chainlink/contracts": "^0.3.1",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.11",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -78,7 +78,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eth-gas-reporter": "^0.2.22",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.4.7",
+    "ethers": "^5.5.4",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "hardhat": "^2.8.3",
     "hardhat-abi-exporter": "^2.8.0",
