--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/swiper": "^5.4.3",
     "@usedapp/core": "^0.11.0",
+    "@web3-react/injected-connector": "^6.0.7",
     "acorn-import-assertions": "^1.7.6",
     "axios": "^0.25.0",
     "big.js": "^6.1.1",
